fixed alignment for #263

--- a/syncnapsis-universe/syncnapsis-universe-conquest/src/main/webapp/styles/base.css
+++ b/syncnapsis-universe/syncnapsis-universe-conquest/src/main/webapp/styles/base.css
@@ -452,9 +452,9 @@ form.large>.select>* {
 	left: 1px;
 }
 
-#match_rank_table tbody td:nth-child(1),
-#match_rank_table tbody td:nth-child(3),
-#match_rank_table tbody td:nth-child(4) {
+#match_rank_table /*tbody*/ td:nth-child(1),
+#match_rank_table /*tbody*/ td:nth-child(3),
+#match_rank_table /*tbody*/ td:nth-child(4) {
 	text-align: right;
 }
 
